# web104ttp

./: .env  Cargo.toml  Rocket.toml  TODO
migrations/2023-02-17-152437_create_pictures/: down.sql  up.sql
src/: database.rs  image_process.rs  main.rs  models.rs  schema.rs  uploader.rs  words.rs
static/: style.css
templates/: auth.html.hbs  edit.html.hbs  index.html.hbs  layout.html.hbs  show.html.hbs
